--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 Beaver Dam Police Report App
 
+You'll need the PHP CURL library installed for the Twitter Class to work.
+
 Bugs:
 Very old police reports appear more than once on occasion.
 	- They exist in the original data.  Some cleaning of the pull can easily fix it.
